# apni-holidays-prod

./: .env  .env.example  .gitignore  .htaccess  INSTALL.md  README.md  deploy.py  firebase-key.json  firebase-service-account.php  firestore_utils.py  main.py  mock_data.py  pyproject.toml  replit.md  requirements.txt  setup-guide.md  update_user_credentials.py  user_credentials_summary.md
config/: database.php  firebase.php
static/css/: style.css
static/js/: main.js
